<resources>
    <string name="app_name">Numosophy</string>
    <string name="account">Don\'t you have a user? <font color="#5b39c6"><b><u><i>Create profile</i></u></b></font> </string>
    <string name="forgot_password"><u>I forgot password</u></string>

    <!--    hint-->
    <string name="hint_name">Name</string>
    <string name="hint_password">Password</string>
    <string name="hint_role">Role</string>
    <string name="hint_group">Group</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    hint sales-->
    <string name="hint_title">Title</string>
    <string name="hint_amount">Amount</string>
    <string name="hint_buyer_name">Buyer name</string>
    <string name="hint_buyer_gender">Buyer gender</string>
    <string name="hint_buyer_age">Buyer age</string>
    <string name="hint_location">Location</string>
    <string name="hint_notes">Notes</string>
    <string name="hint_date">Date</string>

    <!-- ✅ New hints for location picker popup -->
    <string name="hint_country">Select Country</string>
    <string name="hint_state">Select State/Region</string>
    <string name="hint_city">Select City</string>
    <string name="button_ok">OK</string>

    <!--    DashboardActivity-->
    <string name="title_dash">Numosophy</string>
    <string name="sales_amount">Sales Amount</string>
    <string name="line_chart">Line</string>
    <string name="sales_data">Sales data</string>
    <string name="sales_data_title">Sales Data</string>
</resources>